# kicad-packaging

./: CMakeLists.txt  change_log.txt  how-to-build-kicad.txt  kicad_4.0.4+dfsg2.orig-i18n.tar.xz.delta  kicad_4.0.4+dfsg2.orig.tar.xz.delta  kicad_4.0.4+dfsg2.orig.tar.xz.id  kicad_4.0.5+dfsg1.orig-i18n.tar.xz.delta  kicad_4.0.5+dfsg1.orig-libraries.tar.xz.id  kicad_4.0.5+dfsg1.orig.tar.xz.delta  kicad_4.0.6+dfsg1.orig-doc.tar.xz.delta  kicad_4.0.6+dfsg1.orig-doc.tar.xz.id  kicad_4.0.6+dfsg1.orig-i18n.tar.xz.delta  kicad_4.0.6+dfsg1.orig-i18n.tar.xz.id  kicad_4.0.6+dfsg1.orig-libraries.tar.xz.delta  kicad_4.0.6+dfsg1.orig-libraries.tar.xz.id  kicad_4.0.6+dfsg1.orig.tar.xz.delta  kicad_4.0.6+dfsg1.orig.tar.xz.id  kicad_4.0.7+dfsg1.orig-doc.tar.xz.delta  kicad_4.0.7+dfsg1.orig-doc.tar.xz.id  kicad_4.0.7+dfsg1.orig-i18n.tar.xz.delta  kicad_4.0.7+dfsg1.orig-i18n.tar.xz.id  kicad_4.0.7+dfsg1.orig-libraries.tar.xz.delta  kicad_4.0.7+dfsg1.orig-libraries.tar.xz.id  kicad_4.0.7+dfsg1.orig.tar.xz.delta  kicad_4.0.7+dfsg1.orig.tar.xz.id  kicad_5.0.0+dfsg1.orig-doc.tar.xz.delta  kicad_5.0.0+dfsg1.orig-doc.tar.xz.id  kicad_5.0.0+dfsg1.orig-i18n.tar.xz.delta  kicad_5.0.0+dfsg1.orig-i18n.tar.xz.id  kicad_5.0.0+dfsg1.orig.tar.xz.delta  kicad_5.0.0+dfsg1.orig.tar.xz.id  kicad_5.0.0~rc1+dfsg1+20180318.orig-doc.tar.xz.delta  kicad_5.0.0~rc1+dfsg1+20180318.orig-doc.tar.xz.id  kicad_5.0.0~rc1+dfsg1+20180318.orig-i18n.tar.xz.delta  kicad_5.0.0~rc1+dfsg1+20180318.orig-i18n.tar.xz.id  kicad_5.0.0~rc1+dfsg1+20180318.orig.tar.xz.delta  kicad_5.0.0~rc1+dfsg1+20180318.orig.tar.xz.id  kicad_5.0.0~rc1+dfsg1.orig-doc.tar.xz.delta  kicad_5.0.0~rc1+dfsg1.orig-doc.tar.xz.id  kicad_5.0.0~rc1+dfsg1.orig-i18n.tar.xz.delta  (+79 more)
doc/: CMakeLists.txt  download.txt
doc/doc/help/: CMakeLists.txt
doc/doc/help/en/docs_src/: README
doc/doc/help/en/docs_src/cvpcb/: cvpcb_EN.odt
doc/doc/help/en/docs_src/eeschema/: Eeschema_Chapter10_EN-plot_and-print.odt  Eeschema_Chapter11_EN-libedit-basis.odt  Eeschema_Chapter12_EN-libedit-adv.odt  Eeschema_Chapter13_EN-viewlib.odt  Eeschema_Chapter14_EN_customize_netlists_and_BOM.odt  Eeschema_Chapter1_EN.odt  Eeschema_Chapter2_EN.odt  Eeschema_Chapter3_EN.odt  Eeschema_Chapter4_EN.odt  Eeschema_Chapter5_EN.odt  Eeschema_Chapter6_EN_hierarchies.odt  Eeschema_Chapter7_EN-annotate.odt  Eeschema_Chapter8_EN-erc.odt  Eeschema_Chapter9_EN-netlists.odt  eeschema_EN.odm
doc/doc/help/en/docs_src/gerbview/: dcodes.odt  gerbview.sxg  gerbview_en.odt  rs274x.odt
doc/doc/help/en/docs_src/getting_started_in_kicad/: getting_started_in_kicad_en.odt
doc/doc/help/en/docs_src/kicad/: kicad_EN.odt
doc/doc/help/en/docs_src/pcbnew/: modview_EN.odt  pcbnew_EN.odm  pcbnew_chap10_EN.odt  pcbnew_chap11_EN.odt  pcbnew_chap12_EN.odt  pcbnew_chap1_EN.odt  pcbnew_chap2_EN.odt  pcbnew_chap3_EN.odt  pcbnew_chap4_EN.odt  pcbnew_chap5_EN.odt  pcbnew_chap6_EN.odt  pcbnew_chap7_EN.odt  pcbnew_chap8_EN.odt  pcbnew_chap9_EN.odt
doc/doc/help/en/docs_src/pl_editor/: pl_editor_EN.odt
doc/doc/help/file_formats/docs_src/: board_file_format_EN.odt  file_formats.odm  file_formats.sxg  library_file_format_EN.odt  page_layout_file_format.odt  schematic_file_format_EN.odt
doc/doc/help/fr/docs_src/cvpcb/: cvpcb-fr.odt
doc/doc/help/fr/docs_src/eeschema/: Eeschema_Chapter14_EN_customize_netlists_and_BOM.odt  chap1.odt  chap10-plot-print.odt  chap11-libedit-bases.odt  chap12-libedit-av.odt  chap13-viewlib.odt  chap2-commandes.odt  chap3-menu.odt  chap4-toolbar.odt  chap5-edition.odt  chap6-hierarchies.odt  chap7-annotation.odt  chap8-erc.odt  chap9-netlistes.odt  eeschema.odm
doc/doc/help/fr/docs_src/gerbview/: gerbview.sxg  (+1 more)
doc/doc/help/pl/: cvpcb.html  eeschema.html  gerbview.html  getting_started_in_kicad.html  kicad.html  kicad_tools.html  pcbnew.html  pl_editor.html  style.css
doc/doc/help/pl/eeschema-files/: localstyle.css
doc/doc/help/pl/getting_started_in_kicad-files/: localstyle.css
doc/doc/tutorials/: CMakeLists.txt
doc/doc/tutorials/en/: KiCad_Tutorial 2011.odt
doc/doc/tutorials/fr/: KiCad Tutorial.odt
doc/doc/tutorials/it/: KiCad_Tutorial 2011-IT_V0_0.odt
doc/doc/tutorials/ja/: getting_started_in_kicad_ja.odt
doc/doc/tutorials/pl/getting_started_in_kicad/: getting_started_in_kicad_pl.odt
doc/doc/tutorials/zh_CN/: KiCad Tutorial.odt
doc/internat/de/: kicad.mo
doc/internat/fr/: kicad.mo
doc/internat/it/: kicad.mo
doc/internat/ja/: kicad.mo
doc/internat/pl/: kicad.mo
doc/internat/ru/: kicad.mo
kicad-doc/doc/help/: CMakeLists.txt
kicad-doc/doc/help/file_formats/docs_src/: board_file_format_EN.odt  file_formats.sxg  library_file_format_EN.odt  schematic_file_format_EN.odt
kicad-doc/doc/help/footprints_doc/: dil_ell.ps  dil_rd.ps  merge_ps-files.bat  merge_ps-files.ps  sockets-part1.ps  sockets-part2.ps
kicad-doc/doc/help/ru/eeschema/: eeschema_ru.html
(+885 files in other folders)
